--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header container">
         <a href="/">
-        <img src="/img/logo.svg" alt="Logo">
+        <img src="img/logo.svg" alt="Logo">
         </a>
         <nav class="nav">
             <ul class="menu">
@@ -33,7 +33,7 @@
         </nav>
         <div class="user">
             <span class="">Привет, Дмитрий</span>
-            <img class="avatar" src="/img/avatar.jpg" alt="">
+            <img class="avatar" src="img/avatar.jpg" alt="">
         </div>
     </header>
 </body>
